--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="./script.js" type="module"></script>
 </head>
 <body>
+    <div class="score">
+        <span>Score: </span>
+        <span id="scoreElement">0</span>
+    </div>
     <div class="controls">
         <div class="dir">Use the arrow keys to play!</div>
         <button id="reset-button">Reset</button>
