--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="./styles.css">
     <script src="./script.js" type="module"></script>
 </head>
-<body>
-    <div class="score">
-        <span>Score: </span>
-        <span id="scoreElement">0</span>
-    </div>
-    <div class="controls">
-        <div class="dir">Use the arrow keys to play!</div>
-        <button id="reset-button">Reset</button>
-    </div>
-    <div id="game-board"></div>
+<body class="gradient-bg">
+    <div class="grid-pattern"></div>
+        <div class="score">
+            <span>Score: </span>
+            <span id="scoreElement">0</span>
+        </div>
+        <div class="controls">
+            <div class="dir">Use the arrow keys to play!</div>
+            <button id="reset-button">Reset</button>
+        </div>
+        <div id="game-board"></div> 
 </body>
 </html>
