styled up to match the landing page, also added the keycap component

--- a/index.html
+++ b/index.html
@@ -14,8 +14,31 @@
             <span id="scoreElement">0</span>
         </div>
         <div class="controls">
-            <div class="dir">Use the arrow keys to play!</div>
-            <button id="reset-button">Reset</button>
+            <span class="dir">Use arrow keys to play</span>
+            <div class="keycap-container">
+                <div class="up-key">
+                    <article class="keycap">
+                    <aside class="letter">↑</aside>
+                    </article>
+                <div class="other-keys">   
+                    <article class="keycap">
+                    <aside class="letter">←</aside>
+                    </article>
+                    <article class="keycap">
+                    <aside class="letter">↓</aside>
+                    </article>
+                    <article class="keycap">
+                    <aside class="letter">→</aside>
+                    </article>
+                    </div>
+                </div>
+            </div>
+            <button class="fancy-button">
+                <div class="fancy-button-bg"></div>
+                <div class="fancy-button-content">
+                    Restart Game
+                </div>
+            </button>
         </div>
         <div id="game-board"></div> 
 </body>
