--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
             <span>Score: </span>
             <span id="scoreElement">0</span>
         </div>
+        <div class="home-button">
+            <div class="home-button-bg"></div>
+            <div class="home-button-content">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" width="32" height="32">
+                    <path d="M3 11.5L12 4l9 7.5V20a2 2 0 0 1-2 2h-5v-6H10v6H5a2 2 0 0 1-2-2v-8.5z"/>
+                </svg>
+            </div>
+        </div>
         <div class="controls">
             <span class="dir">Use arrow keys to play</span>
             <div class="keycap-container">
