keycap buttons act as user input

--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
             <span class="dir">Use arrow keys to play</span>
             <div class="keycap-container">
                 <div class="up-key">
-                    <article class="keycap">
+                    <article id="up" class="keycap">
                     <aside class="letter">↑</aside>
                     </article>
+                </div>
                 <div class="other-keys">   
-                    <article class="keycap">
+                    <article id="left" class="keycap">
                     <aside class="letter">←</aside>
                     </article>
-                    <article class="keycap">
+                    <article id="down" class="keycap">
                     <aside class="letter">↓</aside>
                     </article>
-                    <article class="keycap">
+                    <article id="right" class="keycap">
                     <aside class="letter">→</aside>
                     </article>
                     </div>
-                </div>
             </div>
             <button class="fancy-button">
                 <div class="fancy-button-bg"></div>
